--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-background-color">
         <nav>
         <h3 class="nav-title">Li<span class="text-primary">a</span>m</h3>
         <ul>
@@ -34,7 +34,32 @@
     </header>
 
 
-    <main></main>
+    <main>
+        <section class="about secondary-background-color">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+         </p>
+         <div class="about-items">
+            <div class="about-item">
+                <p class="item-title">Name</p>
+                <p class="item-description">Liam Maddy</p>
+            </div>      
+            <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-description">abc@gmail.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Date of Birth</p>
+                <p class="item-description">Dec 16,2000</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">From</p>
+                <p class="item-description">Hudik, Sweden</p>
+            </div>
+         </div>
+    
+        </section>
+    </main>
 
 
     <footer>
