--- a/index.html
+++ b/index.html
@@ -94,6 +94,53 @@
                 </div>
             </div>
         </section>
+
+        <section class="resume">
+            <h3 class="section-title">A summary of my resume</h3>
+
+            <div class="resume-container">
+
+                <div class="resume-colume">
+                    <h3 class="resume-colume-title">My education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Master's in CSE</h4>
+                        <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="ex-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                      <hr><div class="experience">
+                        <h4 class="experience-title">Master's in CSE</h4>
+                        <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
+                        <div class="ex-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                        <hr><div class="experience">
+                            <h4 class="experience-title">Master's in CSE</h4>
+                            <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
+                            <div class="ex-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        </div>
+                </div>
+
+                <div class="resume-container">
+
+                    <div class="resume-colume">
+                        <h3 class="resume-colume-title">My education</h3>
+                        <div class="experience">
+                            <h4 class="experience-title">Master's in CSE</h4>
+                            <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
+                            <div class="ex-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        </div>
+                          <hr><div class="experience">
+                            <h4 class="experience-title">Master's in CSE</h4>
+                            <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
+                            <div class="ex-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        </div>
+                            <hr><div class="experience">
+                                <h4 class="experience-title">Master's in CSE</h4>
+                                <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
+                                <div class="ex-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                            </div>
+                    </div>
+            </div>
+        </section>
     </main>
 
 
