--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
 
         <section class="resume">
-            <h3 class="section-title">A summary of my resume</h3>
+            <h3 class="section-title text-center">A summary of my resume</h3>
 
             <div class="resume-container">
 
@@ -140,7 +140,12 @@
                             </div>
                     </div>
             </div>
+            
         </section>
+        <div class="text-center resume-download-cv">
+            <button class="btn-primary">Download CV</button>
+        </div>
+        
     </main>
 
 
